--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
 # 应用服务 WEB 访问端口
 server.port=8080
-spring.datasource.url=jdbc:mysql://58.87.80.62:13306/x_auction?createDatabaseIfNotExist=true
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kservi?createDatabaseIfNotExist=true
+
+# 数据库连接配置
+spring.datasource.url=jdbc:mysql://58.87.80.62:13306/x_auction?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=L4a4nLsk4ADSeCyF
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# 或者使用create来每次都创建表，或者none禁止JPA改变数据库结构
-spring.jpa.hibernate.ddl-auto=update
+# 连接池配置 (HikariCP)
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
+# JPA/Hibernate 配置
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL55Dialect
-# 设置默认表引擎为 InnoDB
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
