feat: 完善增删改查接口并集成MinIO多图上传
- 用户/拍卖/出价模块补全增删改查及参数校验
- 拍卖实体新增imgUrls字段支持多张图片存储(xa_auction_image表)
- 集成MinIO实现图片上传(/auction/uploadImages接口)
- 新增operatorId工具函数统一审计字段回填
- 升级Kotlin至1.8.22并排除okhttp3传递依赖解决版本冲突
- 新增MinIO配置支持分离API端口与控制台地址

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+
+# MinIO 配置
+minio.endpoint=http://minio.iamreone.top
+minio.api-endpoint=http://minio.iamreone.top:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin123
+minio.bucket=xauction
+minio.public-url=http://minio.iamreone.top
